--- a/estilos/agendamento.css
+++ b/estilos/agendamento.css
@@ -51,16 +51,16 @@ div > nav{
 div > nav >a {
     text-decoration: none;
     color:white;
-    background-color: var(--cor02);
-    font-size: 1.5em;
+    background-color: red;
+    font-size: 1.1em;
     text-align: center;
     border-radius: 20px;
-    padding: 11px;
+    padding: 15px;
 }
 
 div > nav > a:hover{
     color: white;
-    font-size: 1.6em;
+    font-size: 1.2em;
     transition: 500ms;
     border: 1px solid rgba(0, 0, 0, 0.404);
 }
@@ -68,18 +68,18 @@ div > nav > a:hover{
 .submit{
     text-decoration: none;
     color: rgb(250, 253, 249);
-    background-color:rgb(37, 243, 37);
-    font-size: 1.5em;
+    background-color:rgb(19, 15, 241);
+    font-size: 1.2em;
     text-align: center;
     border-radius: 20px;
-    padding: 10px;
+    padding: 13px;
     border: none;
     cursor: pointer;
 }
 
 .submit:hover{
     color: white;
-    font-size: 1.6em;
+    font-size: 1.3em;
     transition: 500ms;
     border: 1px solid rgba(0, 0, 0, 0.404);
 }
@@ -92,7 +92,7 @@ main > form {
 main > form > select{
     text-align: center;
     font-size: 1.3em;
-    width: 332px;
+    width: 282px;
     padding: 10px 0px;
     border-radius: 10px;
     background-color: var(--cor01);
@@ -103,7 +103,7 @@ main > form > select{
     border-radius: 10px;
     padding: 10px;
     height: 26px;
-    width: 310px;
+    width: 260px;
     background-color: var(--cor01);
     color: white;
     border: 1px solid rgba(0, 0, 0, 0.322);
@@ -120,7 +120,7 @@ main > form > select{
     padding: 10px;
     margin: 10px 0px;
     height: 26px;
-    width: 310px;
+    width: 260px;
     background-color: var(--cor01);
     color: white;
     border: 1px solid rgba(0, 0, 0, 0.322);
@@ -136,7 +136,7 @@ main > form > select{
     border-radius: 10px;
     padding: 10px;
     height: 26px;
-    width: 310px;
+    width: 260px;
     background-color: var(--cor01);
     color: white;
     border: 1px solid rgba(0, 0, 0, 0.322);
@@ -147,7 +147,7 @@ main > form > select{
     padding: 10px;
     margin: 10px 0px;
     height: 26px;
-    width: 310px;
+    width: 260px;
     background-color: var(--cor01);
     color: white;
     border: 1px solid rgba(0, 0, 0, 0.322);
